<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/courses" />

    </group>
    <item android:title="@string/communicate">

        <menu >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_send"
                    android:title="@string/menu_send" />
            </group>
        </menu>
    </item>
</menu>